[package]
name = "microcorruption-gdbserver"
version = "0.1.0"
authors = ["sapir <yasapir@gmail.com>"]
edition = "2018"

[dependencies]
microcorruption-emu = { path = "../microcorruption-emu" }
gdbstub = { version = "0.1.2", features = ["std"] }
structopt = "0.3.12"

[dependencies.goblin]
version = "0.2.1"
default-features = false
features = ["std", "elf32", "elf64", "endian_fd"]
